[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes1/settings_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts1/ingame_menu.gd" type="Script" id=2]
[ext_resource path="res://Scenes1/settings.tscn" type="PackedScene" id=3]

[node name="ingame_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.666667 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main conatiner" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -112.0
margin_right = 145.0
margin_bottom = 112.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paused_label" type="Label" parent="main conatiner"]
margin_right = 290.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
text = "GAME_IS_PAUSED"
align = 1
valign = 1

[node name="resume" type="Button" parent="main conatiner"]
margin_top = 64.0
margin_right = 290.0
margin_bottom = 101.0
text = "RESUME"

[node name="settings" type="Button" parent="main conatiner"]
margin_top = 105.0
margin_right = 290.0
margin_bottom = 142.0
text = "SETTINGS"

[node name="stats" type="Button" parent="main conatiner"]
margin_top = 146.0
margin_right = 290.0
margin_bottom = 183.0
text = "STATS"

[node name="exit" type="Button" parent="main conatiner"]
margin_top = 187.0
margin_right = 290.0
margin_bottom = 224.0
text = "EXIT"

[node name="settings" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="main conatiner/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="main conatiner/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="main conatiner/exit" to="." method="_on_exit_pressed"]
